<resources>
    <string name="app_name">"eSaathi"</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>

    <string name="welcome_message">Welcome!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="children">For children</string>
    <string name="adult">For adults</string>
    <string name="art">Art and Craft</string>
    <string name="embroidery">Embroidery</string>
    <string name="organic_farming">Organic Farming</string>
    <string name="pottery">Pottery</string>
    <string name="pickle">Pickle</string>
    <string name="tayloring">Tayloring</string>
    <string name="sell">Sell</string>

</resources>
